--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto Condensed' rel='stylesheet'>
     <title>Etch-A-Sketch</title>
 </head>
@@ -17,23 +16,22 @@
     <div class="page">
 
         <div class="controls">
-            <h4>Control Panel</h4>
-            <div class="btns">
-                <button class="btn btn-outline-dark" onclick="setColor('black')">Black</button>
-                <button class="btn btn-outline-warning" onclick="setColor('random')">Random</button>
-                <button class="btn btn-outline-primary">Reset</button>
-            </div>
+            <p>Select Color</p>
+                <button class="btn blk" onclick="setColor('black')">Black</button>
+                <button class="btn rdm" onclick="setColor('random')">Random</button>
             
             <div class="selectSize">
-                <h6>Select Grid Size</h6>
-                <button id="popup" class="btn btn-outline-info">Select</button>
+                <p>Select Grid Size</p>
+                <button class="btn popup" id="popup">Select</button>
                 <P id="message"></P>
+                <P id="draw">Click on board to begin drawing.</P>
             </div>
+            <button class="btn reset" onclick="boardReset()">Reset</button>
         </div>
         <div class="board"></div>
  
     </div>
-   
+
     <footer id="footer">MADE in ATL | 2023</footer>
    <script src="script.js"></script> 
 </body>
